fix overflow issue on mobile

--- a/app/assets/sass/layout/_navbar.scss
+++ b/app/assets/sass/layout/_navbar.scss
@@ -13,6 +13,8 @@
   @media (max-width: 900px) {
     left: 0;
     position: relative;
+    border-bottom-width: 1px;
+    box-shadow: inset 0 -2px black;
   }
 }
 
